# SNF2

./: .gitignore  README.md  environment.yml  pyproject.toml
data/: w1_tsne.csv  w2_tsne.csv
data/subsample/: w1_292+270.csv  w1_332+200.csv  w1_432+200.csv  w1_532+150.csv  w1_632+100.csv  w1_partial_0.6.csv  w1_partial_0.7.csv  w1_partial_0.8.csv  w1_partial_0.9.csv  w2_292+270.csv  w2_332+200.csv  w2_432+200.csv  w2_532+150.csv  w2_632+100.csv  w2_partial_0.6.csv  w2_partial_0.7.csv  w2_partial_0.8.csv  w2_partial_0.9.csv
results/BRCA/: allEmbedding.csv
results/GBM/: allEmbedding.csv
results/LUAD/: allEmbedding.csv
results/cancer/BRCA/: allEmbedding.csv
results/cancer/GBM/: allEmbedding.csv
results/cancer/KIRC/: allEmbedding.csv
results/cancer/LUAD/: allEmbedding.csv
results/cancer/SKCM/: allEmbedding.csv
snf2/: GAT.py  Model.py  embedding.py  main.py  tcga_util.py  tsne_deeplearning.py  tsne_deeplearning_gat.py  util.py
tests/: cell_brain.py  cell_breast.py  cell_kidney.py  cell_lung.py  cell_ov.py  cell_skin.py  test_BRCA.py  test_GBM.py  test_KIRC.py  test_LUAD.py  test_OV.py  test_SKCM.py  test_butterfly.py  test_butterfly_parital.py  test_butterfly_sub.py  test_snf2.py  validation.ipynb
